[project]
name = "team-agents"
version = "0.1.0"
description = "Task Multi-Agent System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "nanoid>=2.0.0",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]
