[project]
name = "team-agents"
version = "0.1.0"
description = "Human-in-the-loop Conversational Multi-Agent Task System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "nanoid>=2.0.0",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
